--- a/src/components/ItemProjeto/item.module.css
+++ b/src/components/ItemProjeto/item.module.css
@@ -1,17 +1,80 @@
+.item-projeto{
+    height: 25%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: flex-start;
+}
+
 .hidden {
     visibility: hidden;
 }
 
 .item-inicio {
+    margin: auto;
+    position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    width: 100%;
-    height: 100px;
+    align-items: center;
+    border-radius: 8px;
+    background: #F00;
+    width: 90%;
+    height: 250px;
 }
 
-.teste {
-    background-color: #F00;
-    width: 100px;
-    height: 50px;
+
+.item-inicio:hover{
+    margin-bottom: 64px;
+    transform: scale(110%);
+    transition: ease-in-out 0.2s;
+}
+
+.item-final{
+    padding-top: -10px;
+    margin: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    background: #F00;
+    width: 90%;
+    height: 250px;
+}
+
+.item-final:hover{
+    transform: scale(115%) translateX(0);
+    transition: ease-in-out 0.5s;
+}
+
+.tituloItem{
+    margin: auto;
+}
+
+@media (min-width: 640px){
+    .item-inicio{
+        height: 90%;
+        margin-bottom: 100px;
+        flex-direction: row;
+    }
+    .item-inicio:hover{
+        transform: scale(120%);
+        transition: ease-in-out 0.7s;
+        margin-bottom: 15%;
+    }
+
+    .item-final{
+        height: 90%;
+        margin-bottom: 100px;
+        flex-direction: row;
+    }
+    .item-final:hover{
+        transform: scale(120%);
+        transition: ease-in-out 0.7s;
+        margin-bottom: 15%;
+    }
 }
