--- a/src/components/ItemProjeto/item.module.css
+++ b/src/components/ItemProjeto/item.module.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+p, h1, h2, h3, h4, a {
+    font-family: Montserrat;
+}
+
 .item-projeto{
     height: 25%;
     width: 100%;
@@ -53,28 +59,46 @@
 
 .tituloItem{
     margin: auto;
+    border-radius: 8px;
 }
 
 @media (min-width: 640px){
     .item-inicio{
-        height: 90%;
+        height: 250px;
         margin-bottom: 100px;
         flex-direction: row;
     }
     .item-inicio:hover{
-        transform: scale(120%);
+        transform: scale(110%);
         transition: ease-in-out 0.7s;
         margin-bottom: 15%;
+        box-shadow: 0px 5px 10px rgba(187, 210, 231, 0.815);
     }
 
     .item-final{
         height: 90%;
         margin-bottom: 100px;
         flex-direction: row;
+        margin-top: -25px;
     }
+
     .item-final:hover{
-        transform: scale(120%);
+        transform: scale(110%);
         transition: ease-in-out 0.7s;
         margin-bottom: 15%;
+    }
+
+    .tituloItem {
+        height: 25%;
+        width: 100%;
+        text-align: center;
+        background: lightcoral;
+        text-transform: capitalize;
+    }
+
+    .bodyItem {
+        height: 50%;
+        width: 100%;
+        background: lightgoldenrodyellow;
     }
 }
