--- a/src/components/ItemProjeto/item.module.css
+++ b/src/components/ItemProjeto/item.module.css
@@ -26,8 +26,10 @@ p, h1, h2, h3, h4, a {
     justify-content: space-between;
     align-items: center;
     border-radius: 8px;
-    background: #F00;
-    width: 90%;
+    border-width: 2px;
+    border-color: black;
+    background: rgb(148 163 184);
+    width: 45%;
     height: 250px;
 }
 
@@ -39,7 +41,6 @@ p, h1, h2, h3, h4, a {
 }
 
 .item-final{
-    padding-top: -10px;
     margin: auto;
     position: relative;
     display: flex;
@@ -47,7 +48,9 @@ p, h1, h2, h3, h4, a {
     justify-content: space-between;
     align-items: center;
     border-radius: 8px;
-    background: #F00;
+    border-width: 2px;
+    border-color: black;
+    background: rgb(148 163 184);
     width: 90%;
     height: 250px;
 }
@@ -59,14 +62,16 @@ p, h1, h2, h3, h4, a {
 
 .tituloItem{
     margin: auto;
-    border-radius: 8px;
 }
+
 
 @media (min-width: 640px){
     .item-inicio{
         height: 250px;
         margin-bottom: 100px;
         flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
     .item-inicio:hover{
         transform: scale(110%);
@@ -76,29 +81,46 @@ p, h1, h2, h3, h4, a {
     }
 
     .item-final{
-        height: 90%;
+        height: 250px;
         margin-bottom: 100px;
-        flex-direction: row;
-        margin-top: -25px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .item-final:hover{
-        transform: scale(110%);
+        transform: scale(105%);
         transition: ease-in-out 0.7s;
         margin-bottom: 15%;
     }
 
     .tituloItem {
-        height: 25%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 15%;
         width: 100%;
-        text-align: center;
-        background: lightcoral;
+        background: transparent;
         text-transform: capitalize;
     }
 
     .bodyItem {
-        height: 50%;
+        height: 60%;
         width: 100%;
-        background: lightgoldenrodyellow;
+        background: transparent;
+    }
+
+    .footItem {
+        height: 25%;
+        width: 100%;
+        background: transparent;
+        text-align: center;
+    }  
+    
+    .sideItem {
+        width: 50%;
+        height: 100%;
+        background: violet;
+        border-radius: 8px;
     }
 }
