--- a/src/components/ItemProjeto/item.module.css
+++ b/src/components/ItemProjeto/item.module.css
@@ -14,7 +14,7 @@ p, h1, h2, h3, h4, a {
     justify-content: flex-start;
 }
 
-.hidden {
+.hidden, .seta, .setaFinal {
     visibility: hidden;
 }
 
@@ -34,12 +34,6 @@ p, h1, h2, h3, h4, a {
 }
 
 
-.item-inicio:hover{
-    margin-bottom: 64px;
-    transform: scale(110%);
-    transition: ease-in-out 0.2s;
-}
-
 .item-final{
     margin: auto;
     position: relative;
@@ -55,10 +49,6 @@ p, h1, h2, h3, h4, a {
     height: 250px;
 }
 
-.item-final:hover{
-    transform: scale(115%) translateX(0);
-    transition: ease-in-out 0.5s;
-}
 
 .tituloItem{
     margin: auto;
@@ -66,6 +56,12 @@ p, h1, h2, h3, h4, a {
 
 
 @media (min-width: 640px){
+
+    .item-projeto {
+        height: 250px;
+        width: 100%;
+    }
+
     .item-inicio{
         height: 250px;
         margin-bottom: 100px;
@@ -73,11 +69,10 @@ p, h1, h2, h3, h4, a {
         justify-content: space-between;
         align-items: center;
     }
+
     .item-inicio:hover{
         transform: scale(110%);
-        transition: ease-in-out 0.7s;
-        margin-bottom: 15%;
-        box-shadow: 0px 5px 10px rgba(187, 210, 231, 0.815);
+        transition-duration: 750ms;
     }
 
     .item-final{
@@ -86,12 +81,12 @@ p, h1, h2, h3, h4, a {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: 75%;
     }
 
     .item-final:hover{
-        transform: scale(105%);
-        transition: ease-in-out 0.7s;
-        margin-bottom: 15%;
+        transform: scale(110%);
+        transition-duration: 750ms;
     }
 
     .tituloItem {
@@ -105,6 +100,11 @@ p, h1, h2, h3, h4, a {
     }
 
     .bodyItem {
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: justify-between;
+        align-items: center;
         height: 60%;
         width: 100%;
         background: transparent;
@@ -118,9 +118,30 @@ p, h1, h2, h3, h4, a {
     }  
     
     .sideItem {
-        width: 50%;
+        cursor: pointer;
+        margin-right: 1%;
+        width: 40px;
+        height: 40px;
+        background: rgba(0, 0, 0, 0.281);
+        border-radius: 100%;
+    }
+
+    .sideItemFinal {
+        position: absolute;
+        left: 0;
+        cursor: pointer;
+        margin-left: 1%;
+        width: 40px;
+        height: 40px;
+        background: rgba(5, 5, 5, 0.281);
+        border-radius: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .main-Body {
+        margin-left: 1%;
+        width: 100%;
         height: 100%;
-        background: violet;
-        border-radius: 8px;
     }
 }
