--- a/src/components/ItemProjeto/item.module.css
+++ b/src/components/ItemProjeto/item.module.css
@@ -58,13 +58,17 @@ p, h1, h2, h3, h4, a {
 @media (min-width: 640px){
 
     .item-projeto {
-        height: 250px;
+        height: fit-content;
         width: 100%;
+    }
+
+    .hidden {
+        margin-bottom: -30%;
     }
 
     .item-inicio{
         height: 250px;
-        margin-bottom: 100px;
+        margin-bottom: 25%;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
@@ -76,6 +80,7 @@ p, h1, h2, h3, h4, a {
     }
 
     .item-final{
+        margin-top: -50px;
         height: 250px;
         margin-bottom: 100px;
         flex-direction: column;
@@ -90,10 +95,11 @@ p, h1, h2, h3, h4, a {
     }
 
     .tituloItem {
+        margin-top: 1.5%;
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 15%;
+        height: 10%;
         width: 100%;
         background: transparent;
         text-transform: capitalize;
@@ -101,22 +107,36 @@ p, h1, h2, h3, h4, a {
 
     .bodyItem {
         margin: auto;
+        margin-top: 2.5%;
+        margin-bottom: 2.5%;
         display: flex;
         flex-direction: row;
         justify-content: justify-between;
         align-items: center;
-        height: 60%;
+        height: 50%;
         width: 100%;
         background: transparent;
     }
 
     .footItem {
-        height: 25%;
+        height: 20%;
         width: 100%;
         background: transparent;
         text-align: center;
     }  
     
+    .stackItem {
+        margin-bottom: 1.5%;
+        height: 15%;
+        width: 100%;
+        background: transparent;
+        text-align: center;
+    }
+
+    .linkItem:hover {
+        color: lightgray;
+    }
+
     .sideItem {
         cursor: pointer;
         margin-right: 1%;
@@ -127,13 +147,11 @@ p, h1, h2, h3, h4, a {
     }
 
     .sideItemFinal {
-        position: absolute;
-        left: 0;
         cursor: pointer;
         margin-left: 1%;
         width: 40px;
         height: 40px;
-        background: rgba(5, 5, 5, 0.281);
+        background: rgba(0, 0, 0, 0.281);
         border-radius: 100%;
         justify-content: center;
         align-items: center;
@@ -143,5 +161,20 @@ p, h1, h2, h3, h4, a {
         margin-left: 1%;
         width: 100%;
         height: 100%;
+    }
+
+
+    .img-Item {
+        width: 100%;
+        height: 100%;
+        margin-left: 12.5%;
+    }
+
+    .img-Inicio {
+        margin: auto;
+        height: 245px;
+        width: 245px;
+        justify-content: center;
+        align-items: center;
     }
 }
