--- a/src/components/ItemProjeto/item.module.css
+++ b/src/components/ItemProjeto/item.module.css
@@ -5,8 +5,8 @@ p, h1, h2, h3, h4, a {
 }
 
 .item-projeto{
-    height: 25%;
-    width: 100%;
+    height: 75vh;
+    width: 50vw;
     position: relative;
     display: flex;
     flex-direction: row-reverse;
@@ -18,8 +18,14 @@ p, h1, h2, h3, h4, a {
     visibility: hidden;
 }
 
+.hidden {
+    margin-bottom: -110%;
+}
+
 .item-inicio {
+    height: 50%;
     margin: auto;
+    margin-bottom: 10vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -29,13 +35,14 @@ p, h1, h2, h3, h4, a {
     border-width: 2px;
     border-color: black;
     background: rgb(148 163 184);
-    width: 45%;
-    height: 250px;
+    
 }
 
 
 .item-final{
+    height: 60vh;
     margin: auto;
+    margin-bottom: 10vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -45,8 +52,6 @@ p, h1, h2, h3, h4, a {
     border-width: 2px;
     border-color: black;
     background: rgb(148 163 184);
-    width: 90%;
-    height: 250px;
 }
 
 
@@ -54,8 +59,24 @@ p, h1, h2, h3, h4, a {
     margin: auto;
 }
 
+.img-Item {
+    margin: auto;
+    margin-top: .5%;
+    margin-bottom: .5%;
+    height: 90%;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-Inicio {
+    margin: auto;
+    height: 100%;
+    width: 100%;
+}
 
 @media (min-width: 640px){
+
 
     .item-projeto {
         height: fit-content;
@@ -67,7 +88,8 @@ p, h1, h2, h3, h4, a {
     }
 
     .item-inicio{
-        height: 250px;
+        height: 40vh;
+        width: 30vw;
         margin-bottom: 25%;
         flex-direction: row;
         justify-content: space-between;
@@ -81,12 +103,12 @@ p, h1, h2, h3, h4, a {
 
     .item-final{
         margin-top: -50px;
-        height: 250px;
+        height: 40vh;
         margin-bottom: 100px;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 75%;
+        width: 50vw;
     }
 
     .item-final:hover{
@@ -140,17 +162,18 @@ p, h1, h2, h3, h4, a {
     .sideItem {
         cursor: pointer;
         margin-right: 1%;
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
         background: rgba(0, 0, 0, 0.281);
         border-radius: 100%;
     }
 
     .sideItemFinal {
         cursor: pointer;
-        margin-left: 1%;
-        width: 40px;
-        height: 40px;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
+        width: 30px;
+        height: 30px;
         background: rgba(0, 0, 0, 0.281);
         border-radius: 100%;
         justify-content: center;
@@ -158,7 +181,7 @@ p, h1, h2, h3, h4, a {
     }
 
     .main-Body {
-        margin-left: 1%;
+        margin: auto;
         width: 100%;
         height: 100%;
     }
