--- a/src/components/ItemContato/item.module.css
+++ b/src/components/ItemContato/item.module.css
@@ -11,19 +11,45 @@ p, h1, h2, h3, h4, a {
 @media(min-width: 640px){
 
     .form {
-        width: 40vw;
-        height: 65vh;
+        width: 50vw;
+        height: 80vh;
         padding-left: 1%;
         padding-right: 1%;
         border-radius: 8px;
         margin: auto;
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+        justify-content: center;
+    }
+
+    .iconsForm {
+        margin: auto;
+        margin-top: 5%;
+        margin-bottom: 5%;
+        height: 5vh;
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .icon {
+        height: 75%;
+        padding: 5%;
+    }
+
+    .icon:hover {
+        transform: scale(110%);
+        transition: ease-in-out;
     }
 
     .mainForm {
         height: 20vh;
-        width: 100%;
+        width: 90%;
         display: block;
+        justify-content: center;
         align-items: center;
+        margin: auto;
         margin-bottom: 9vh;
     }
 
@@ -56,17 +82,43 @@ p, h1, h2, h3, h4, a {
     }
 
     .msgForm {
-        width: 100%;
+        width: 90%;
         height: 30vh;
+        margin: auto;
+        margin-bottom: 1.5%;
         display: flex;
         align-items: flex-start;
         justify-content: flex-start;
     }
 
     .txtArea {
-        width: 80%;
+        width: 100%;
         height: 100%;
         margin-left: 2.5%;
         border-radius: 8px;
+        padding: 1%;
+    }
+
+    .btnDiv {
+        width: 90%;
+        margin: auto;
+        justify-content: center;
+    }
+
+    .buttonForm {
+        width: 100%;
+        margin: auto;
+        border-color: grey;
+        border-radius: 8px;
+        border-width: 1px;
+        background: rgba(251 207 232);
+        font-family: Montserrat;
+    }
+
+    .buttonForm:hover {
+        transform: scale(102%);
+        transition: ease-in-out;
+        box-shadow: 0px 1px 10px -5px white;
+        background: rgb(255, 127, 200);
     }
 }
