--- a/src/components/ItemContato/item.module.css
+++ b/src/components/ItemContato/item.module.css
@@ -1,11 +1,102 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-p, h1, h2, h3, h4, a {
+p, h1, h2, h3, h4, a, .form {
     font-family: Montserrat;
 }
 
 .form {
     background: rgb(148 163 184);
+    width: 90vw;
+    height: 70vh;
+    padding: 2.5%;
+    border-radius: 8px;
+    margin: auto;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    justify-content: center;
+}
+
+.iconsForm {
+    margin: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    height: 5vh;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.mainForm {
+    height: 20vh;
+    width: 100%;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 1vh;
+}
+
+.itemForm {
+    height: 20%;
+    width: 100%;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.5vh;
+    margin-bottom: 3.5vh;
+}
+
+.labelForm {
+    align-self: first baseline;
+    justify-self: center;
+    font-weight: 600;
+}
+
+.inputForm {
+    width: 100%;
+    height: 3.5vh;
+    padding: 1.5%;
+    justify-self: flex-start;
+    border-radius: 8px;
+    border-width: 1px;
+    border-color: rgb(161, 167, 175);
+}
+
+.msgForm {
+    width: 100%;
+    height: 30vh;
+    margin: auto;
+    margin-bottom: 1.5%;
+    margin-top: 7.5%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.txtArea {
+    width: 100%;
+    height: 100%;
+    margin-left: 2.5%;
+    border-radius: 8px;
+    padding: 1%;
+}
+
+
+.btnDiv {
+    width: 100%;
+    margin: auto;
+    justify-content: center;
+}
+
+.buttonForm {
+    width: 100%;
+    margin: auto;
+    border-color: grey;
+    border-radius: 8px;
+    border-width: 1px;
+    cursor: pointer;
+    background-color: rgb(251, 207, 232);
 }
 
 @media(min-width: 640px){
@@ -13,24 +104,7 @@ p, h1, h2, h3, h4, a {
     .form {
         width: 50vw;
         height: 80vh;
-        padding-left: 1%;
-        padding-right: 1%;
-        border-radius: 8px;
-        margin: auto;
-        margin-top: 5vh;
-        margin-bottom: 5vh;
-        justify-content: center;
-    }
-
-    .iconsForm {
-        margin: auto;
-        margin-top: 5%;
-        margin-bottom: 5%;
-        height: 5vh;
-        width: 90%;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
+        padding: 0% 1% 0% 1%;
     }
 
     .icon {
@@ -43,32 +117,16 @@ p, h1, h2, h3, h4, a {
         transition: ease-in-out;
     }
 
+    
     .mainForm {
-        height: 20vh;
         width: 90%;
-        display: block;
-        justify-content: center;
-        align-items: center;
-        margin: auto;
         margin-bottom: 9vh;
     }
 
+    
     .itemForm {
-        height: 20%;
-        width: 100%;
-        display: block;
-        justify-content: center;
-        align-items: center;
         margin-top: 1.5vh;
         margin-bottom: 5vh;
-    }
-
-    .labelForm {
-        align-self: first baseline;
-        justify-self: center;
-        text-transform: capitalize;
-        font-weight: 600;
-        font-family: Montserrat;
     }
 
     .inputForm {
@@ -83,37 +141,12 @@ p, h1, h2, h3, h4, a {
 
     .msgForm {
         width: 90%;
-        height: 30vh;
-        margin: auto;
         margin-bottom: 1.5%;
-        display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
-    }
-
-    .txtArea {
-        width: 100%;
-        height: 100%;
-        margin-left: 2.5%;
-        border-radius: 8px;
-        padding: 1%;
+        margin-top: 0%;
     }
 
     .btnDiv {
         width: 90%;
-        margin: auto;
-        justify-content: center;
-    }
-
-    .buttonForm {
-        width: 100%;
-        margin: auto;
-        border-color: grey;
-        border-radius: 8px;
-        border-width: 1px;
-        font-family: Montserrat;
-        cursor: pointer;
-        background-color: rgb(251, 207, 232);
     }
 
     .buttonForm:hover {
